--- a/server.yml
+++ b/server.yml
@@ -3,6 +3,6 @@ TSPersonalShop:
  118.33.237.101: 윈드서버-eru
 TSSmartShop:
  118.33.237.101: 윈드서버-eru
-sneakwatch:
+SneakWatch:
  45.76.100.179: T서버-Q
 ...
